Fix to nav toggle on mobile.

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -349,8 +349,8 @@ html.nav-open {
 
 	@media @mobile {
 		top: 1px;
-		right: 0;
-		padding: 21px 10px;
+		right: 15px;
+		padding: 21px 0 21px 10px;
 		height: 44px;
 	}
 
